# Steiner_task

./: .travis.yml  CMakeLists.txt  README.md  Source.cpp  construction_tools.h  main.cpp  objects.h  tests.md
project/: construction_tools.h  main.cpp  objects.h
tests/: tests.md
tests/tests/: 006.ans  007.ans  008.ans  009.ans  010.ans  011.ans  012.ans  013.ans  014.ans
